---
sidebar: sidebar 
permalink: whats-new.html 
keywords: 'what"s new, features, new, release notes, bugs, limitations, known issues, enhancements, fixes, backup, restore, bluexp, bluexp backup and recovery, protection' 
summary: Saiba o que há de novo no backup e recuperação do BlueXP . 
---
= Novidades do backup e recuperação do BlueXP 
:hardbreaks:
:allow-uri-read: 
:nofooter: 
:icons: font
:linkattrs: 
:imagesdir: ./media/


[role="lead"]
Saiba o que há de novo no backup e recuperação do BlueXP .



== 09 de junho de 2025

Esta versão de backup e recuperação do BlueXP  inclui as seguintes atualizações.



=== Atualizações de suporte ao catálogo indexado

Em fevereiro de 2025, introduzimos o recurso de indexação atualizado (Catálogo Indexado v2) que você usa durante o método de Pesquisa e Restauração para restaurar dados. A versão anterior melhorou significativamente o desempenho da indexação de dados em ambientes locais. Com esta versão, o catálogo de indexação agora está disponível em ambientes Amazon Web Services, Microsoft Azure e Google Cloud Platform (GCP).

Se você for um novo cliente, o Catálogo Indexado v2 estará habilitado por padrão para todos os novos ambientes. Se você já for cliente, poderá reindexar seu ambiente para aproveitar o Catálogo Indexado v2.

.Como você ativa a indexação?
Antes de poder utilizar o método de pesquisa e restauro de restaurar dados, tem de ativar a "Indexação" em cada ambiente de trabalho de origem a partir do qual pretende restaurar volumes ou ficheiros. Selecione a opção *Ativar indexação* quando estiver executando uma pesquisa e restauração.

O Catálogo Indexado pode então rastrear cada volume e arquivo de backup, tornando suas pesquisas rápidas e eficientes.

Para obter mais informações, https://docs.netapp.com/us-en/bluexp-backup-recovery/task-restore-backups-ontap.html#restore-ontap-data-using-search-restore["Como restaurar dados do ONTAP usando pesquisar  Restaurar"]consulte .


